# magnifee

./: .gitmodules  Cargo.toml  README.md  reference.docx
src/: main.rs
templates/: spa.md
