[package]
name = "project-zero-cost"
version = "0.1.0"
authors = ["Ivan Tham <pickfire@riseup.net>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
bytes = "0.4"
env_logger = "0.5"
listenfd = "0.3"
pandoc = "0.7"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
askama = "0.7"

[patch.crates-io]
pandoc = { path = "rust-pandoc" }
